--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.62.11",
@@ -33,6 +34,7 @@
     "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
     "next": "^15.1.3",
+    "next-themes": "^0.4.4",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
