--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/calorie-counter"
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+
+# pg_dump command to backup database
+# docker exec calorie-counter-postgres pg_dump -U postgres -F t calorie-counter | gzip >./backups/my_db-$(date +%Y-%m-%d).tar.gz
