--- a/package.json
+++ b/package.json
@@ -71,5 +71,9 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
-  }
+  },
+  "trustedDependencies": [
+    "@clerk/shared",
+    "@vercel/speed-insights"
+  ]
 }
