--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/eslint": "^8.56.12",
     "@types/node": "^22.10.10",
     "@types/react": "^19.0.8",
@@ -66,7 +67,7 @@
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3"
   },
   "ct3aMetadata": {
