--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.20.6",
-    "@trpc/client": "11.0.0-rc.660",
-    "@trpc/react-query": "11.0.0-rc.660",
-    "@trpc/server": "11.0.0-rc.660",
+    "@trpc/client": "^11.0.0-rc.730",
+    "@trpc/react-query": "^11.0.0-rc.730",
+    "@trpc/server": "^11.0.0-rc.730",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.1",
