--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.12.4",
+    "@clerk/nextjs": "^6.12.8",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -28,20 +28,20 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "^5.67.2",
+    "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-table": "^8.21.2",
-    "@trpc/client": "^11.0.0-rc.828",
-    "@trpc/react-query": "^11.0.0-rc.828",
-    "@trpc/server": "^11.0.0-rc.828",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "@trpc/server": "^11.0.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.40.0",
+    "drizzle-orm": "^0.41.0",
     "geist": "^1.3.1",
-    "lucide-react": "^0.479.0",
-    "next": "^15.2.1",
-    "next-themes": "^0.4.5",
+    "lucide-react": "^0.483.0",
+    "next": "^15.2.3",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -54,21 +54,21 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.12",
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/eslint": "^8.56.12",
-    "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
+    "@types/node": "^22.13.11",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.26.0",
-    "@typescript-eslint/parser": "^8.26.0",
+    "@typescript-eslint/eslint-plugin": "^8.27.0",
+    "@typescript-eslint/parser": "^8.27.0",
     "drizzle-kit": "^0.30.5",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^15.2.1",
+    "eslint-config-next": "^15.2.3",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.12",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5.8.2"
   },
   "ct3aMetadata": {
