--- a/package.json
+++ b/package.json
@@ -1,81 +1,72 @@
 {
-  "name": "calorie-counter",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "next build",
-    "check": "next lint && tsc --noEmit",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "preview": "next build && next start",
-    "start": "next start",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@clerk/nextjs": "^6.15.0",
-    "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-select": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "^5.74.3",
-    "@tanstack/react-table": "^8.21.3",
-    "@trpc/client": "^11.1.0",
-    "@trpc/react-query": "^11.1.0",
-    "@trpc/server": "^11.1.0",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "drizzle-orm": "^0.42.0",
-    "geist": "^1.3.1",
-    "lucide-react": "^0.488.0",
-    "next": "^15.3.0",
-    "next-themes": "^0.4.6",
-    "postgres": "^3.4.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.55.0",
-    "server-only": "^0.0.1",
-    "sonner": "^2.0.3",
-    "superjson": "^2.2.2",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.4",
-    "@types/eslint": "^8.56.12",
-    "@types/node": "^22.14.1",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@typescript-eslint/eslint-plugin": "^8.30.1",
-    "@typescript-eslint/parser": "^8.30.1",
-    "drizzle-kit": "^0.31.0",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^15.3.0",
-    "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.4",
-    "typescript": "^5.8.3"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.38.1"
-  },
-  "trustedDependencies": [
-    "@clerk/shared",
-    "@vercel/speed-insights"
-  ]
+	"name": "calorie-counter",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "next build",
+		"check": "biome check .",
+		"check:unsafe": "biome check --write --unsafe .",
+		"check:write": "biome check --write .",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "drizzle-kit migrate",
+		"db:push": "drizzle-kit push",
+		"db:studio": "drizzle-kit studio",
+		"dev": "next dev --turbo",
+
+		"preview": "next build && next start",
+		"start": "next start",
+		"typecheck": "tsc --noEmit"
+	},
+	"dependencies": {
+		"@clerk/nextjs": "^6.15.0",
+		"@hookform/resolvers": "^5.0.1",
+		"@radix-ui/react-dialog": "^1.1.7",
+		"@radix-ui/react-dropdown-menu": "^2.1.7",
+		"@radix-ui/react-label": "^2.1.3",
+		"@radix-ui/react-select": "^2.1.7",
+		"@radix-ui/react-slot": "^1.2.0",
+		"@t3-oss/env-nextjs": "^0.12.0",
+		"@tanstack/react-query": "^5.74.3",
+		"@tanstack/react-table": "^8.21.3",
+		"@trpc/client": "^11.1.0",
+		"@trpc/react-query": "^11.1.0",
+		"@trpc/server": "^11.1.0",
+		"@vercel/analytics": "^1.5.0",
+		"@vercel/speed-insights": "^1.2.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"drizzle-orm": "^0.42.0",
+		"geist": "^1.3.1",
+		"lucide-react": "^0.488.0",
+		"next": "^15.3.0",
+		"next-themes": "^0.4.6",
+		"postgres": "^3.4.5",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-hook-form": "^7.55.0",
+		"server-only": "^0.0.1",
+		"sonner": "^2.0.3",
+		"superjson": "^2.2.2",
+		"tailwind-merge": "^3.2.0",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.24.2"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@tailwindcss/postcss": "^4.1.4",
+		"@types/node": "^22.14.1",
+		"@types/react": "^19.1.2",
+		"@types/react-dom": "^19.1.2",
+		"drizzle-kit": "^0.31.0",
+		"postcss": "^8.5.3",
+		"prettier": "^3.5.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"tailwindcss": "^4.1.4",
+		"typescript": "^5.8.3"
+	},
+	"ct3aMetadata": {
+		"initVersion": "7.38.1"
+	},
+	"trustedDependencies": ["@clerk/shared", "@vercel/speed-insights"]
 }
