--- a/package.json
+++ b/package.json
@@ -65,5 +65,5 @@
 	"ct3aMetadata": {
 		"initVersion": "7.38.1"
 	},
-	"trustedDependencies": ["@clerk/shared", "@vercel/speed-insights"]
+	"packageManager": "pnpm@10.8.1"
 }
