--- a/package.json
+++ b/package.json
@@ -26,35 +26,36 @@
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@t3-oss/env-nextjs": "^0.13.6",
-		"@tanstack/react-query": "^5.79.0",
+		"@tanstack/react-query": "^5.80.2",
 		"@tanstack/react-table": "^8.21.3",
-		"@trpc/client": "^11.1.4",
-		"@trpc/react-query": "^11.1.4",
-		"@trpc/server": "^11.1.4",
+		"@trpc/client": "^11.2.0",
+		"@trpc/react-query": "^11.2.0",
+		"@trpc/server": "^11.2.0",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
+		"calorie-counter": "link:",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"drizzle-orm": "^0.44.0",
+		"drizzle-orm": "^0.44.1",
 		"geist": "^1.4.2",
-		"lucide-react": "^0.511.0",
-		"next": "^15.3.2",
+		"lucide-react": "^0.512.0",
+		"next": "^15.3.3",
 		"next-themes": "^0.4.6",
 		"postgres": "^3.4.7",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-hook-form": "^7.56.4",
+		"react-hook-form": "^7.57.0",
 		"server-only": "^0.0.1",
-		"sonner": "^2.0.3",
+		"sonner": "^2.0.5",
 		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.3.0",
 		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.25.36"
+		"zod": "^3.25.50"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@tailwindcss/postcss": "^4.1.8",
-		"@types/node": "^22.15.24",
+		"@types/node": "^22.15.29",
 		"@types/react": "^19.1.6",
 		"@types/react-dom": "^19.1.5",
 		"drizzle-kit": "^0.31.1",
