--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
 		"db:migrate": "drizzle-kit migrate",
 		"db:push": "drizzle-kit push",
 		"db:studio": "drizzle-kit studio",
-		"dev": "next dev --turbo",
+		"dev": "next dev",
 		"preview": "next build && next start",
 		"start": "next start",
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@clerk/nextjs": "^6.34.0",
+		"@clerk/nextjs": "^6.34.1",
 		"@hookform/resolvers": "^5.2.2",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -26,11 +26,11 @@
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@t3-oss/env-nextjs": "^0.13.8",
-		"@tanstack/react-query": "^5.90.5",
+		"@tanstack/react-query": "^5.90.6",
 		"@tanstack/react-table": "^8.21.3",
-		"@trpc/client": "^11.7.0",
-		"@trpc/react-query": "^11.7.0",
-		"@trpc/server": "^11.7.0",
+		"@trpc/client": "^11.7.1",
+		"@trpc/react-query": "^11.7.1",
+		"@trpc/server": "^11.7.1",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
 		"calorie-counter": "link:",
@@ -38,27 +38,27 @@
 		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.44.7",
 		"geist": "^1.5.1",
-		"lucide-react": "^0.548.0",
-		"next": "^16.0.0",
+		"lucide-react": "^0.552.0",
+		"next": "^16.0.1",
 		"next-themes": "^0.4.6",
 		"postgres": "^3.4.7",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
-		"react-hook-form": "^7.65.0",
+		"react-hook-form": "^7.66.0",
 		"server-only": "^0.0.1",
 		"sonner": "^2.0.7",
-		"superjson": "^2.2.3",
+		"superjson": "^2.2.5",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^4.1.12"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.0",
+		"@biomejs/biome": "^2.3.2",
 		"@tailwindcss/postcss": "^4.1.16",
-		"@types/node": "^24.9.1",
+		"@types/node": "^24.9.2",
 		"@types/react": "^19.2.2",
 		"@types/react-dom": "^19.2.2",
-		"drizzle-kit": "^0.31.5",
+		"drizzle-kit": "^0.31.6",
 		"postcss": "^8.5.6",
 		"tailwindcss": "^4.1.16",
 		"typescript": "^5.9.3"
@@ -66,5 +66,5 @@
 	"ct3aMetadata": {
 		"initVersion": "7.38.1"
 	},
-	"packageManager": "pnpm@10.19.0"
+	"packageManager": "pnpm@10.20.0"
 }
